Change display for invoice page

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -15,22 +15,22 @@
         <div class="container">
             <div class="dashboard-buttons-div">
                 <!--DEPARTRMENTS-->
-                <button class="dashboard-button-normal" onclick="window.location.href='/admin/departments-clinics-and-units';">
+                <button class="dashboard-button-normal" onclick="window.location.href='/admin/departments-clinics-and-units';" disabled>
                     <span class="lh-1" style="padding-top: 0.5rem;"><i class="fas fa-clinic-medical extra-big-icon"></i></span> 
                     <span class="lh-1 text-wrap" style="font-weight: 500;">Departments, Clinics & Units</span>
                 </button>
                 <!--DOCTORS-->
-                <button class="dashboard-button-normal" onclick="window.location.href='/admin/doctors';">
+                <button class="dashboard-button-normal" onclick="window.location.href='/admin/doctors';" disabled>
                     <span class="lh-1" style="padding-top: 0.5rem;"><i class="fas fa-user-md extra-big-icon"></i></span> 
                     <span class="lh-1" style="font-weight: 500;">Doctors</span>
                 </button>
                 <!--PATIENTS-->
-                <button class="dashboard-button-normal" onclick="window.location.href='/admin/patients';">
+                <button class="dashboard-button-normal" onclick="window.location.href='/admin/patients';" disabled>
                     <span class="lh-1" style="padding-top: 0.5rem;"><i class="fas fa-procedures extra-big-icon"></i></span> 
                     <span class="lh-1" style="font-weight: 500;">Patients</span>
                 </button>
                 <!--REGISTER AN ACCOUNT-->
-                <button class="dashboard-button-normal" onclick="window.location.href='/register';">
+                <button class="dashboard-button-normal" onclick="window.location.href='/register';" disabled>
                     <span class="lh-1" style="padding-top: 0.5rem;"><i class="fas fa-user-plus extra-big-icon"></i></span> 
                     <span class="lh-1" style="font-weight: 500;">Register an account</span>
                 </button>
@@ -40,7 +40,7 @@
                     <span class="lh-1" style="font-weight: 500;">Generate patient invoice</span>
                 </button>
                 <!--BROADCAST MESSAGE-->
-                <button class="dashboard-button-normal" onclick="window.location.href='/admin/broadcast-message';">
+                <button class="dashboard-button-normal" onclick="window.location.href='/admin/broadcast-message';" disabled>
                     <span class="lh-1" style="padding-top: 0.5rem;"><i class="fas fa-broadcast-tower extra-big-icon"></i></span> 
                     <span class="lh-1" style="font-weight: 500;">Send a broadcast message</span>
                 </button>
